Deployments/ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: nptel
spec:
  rules:
  - host: www.nptel.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nptel-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nptel-webservice
            port:
              number: 80
